--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -28,7 +28,7 @@
         <li class="author__desktop"><i class="fa-solid icon-pad-right" aria-hidden="true">🤠</i>{{ author.location }}</li>
       {% endif %}
       {% if author.employer %}
-        <li class="author__desktop"><i class="fa fa-solid icon-pad-right" aria-hidden="true">🧠</i>{{ author.employer }}</li>
+        <li class="author__desktop"><i class="fa fa-solid icon-pad-right" aria-hidden="true">📚</i>{{ author.employer }}</li>
       {% endif %}
       {% if author.uri %}
         <li><a href="{{ author.uri }}"><i class="fas fa-fw icon-pad-right" aria-hidden="true"></i>{{ site.data.ui-text[site.locale].website_label | default: "Website" }}</a></li>
